--- a/src/scss/partials/_links.scss
+++ b/src/scss/partials/_links.scss
@@ -1,37 +1,38 @@
 
-
-/* BREAK OUT INTO A LINKS PARTIAL? - ALSO GET THE NICE PSUEDO MIXIN FROM WORK */ 
-//https://codepen.io/gabrielcojea/pen/ExPaBzQ - not working if line has a line break ... hrem
+//add generic styling to a tags
 a {
-
-        //!
-        white-space: nowrap; //temp fix for underline effect not liking a line break  would need to be careful on how long a link it, remove this effect on mobilke - oh yes
-
-    position: relative;
-
 	color: var(--colour-accent);
 	text-decoration: none;
-	&:hover { color: var(--colour-accent-alt);  }
+	&:hover { color: var(--colour-accent-alt); }
+}
 
-    &::before{
-        content: '';
-        position: absolute;
-        bottom: 8px; //@todo - don't use absolute
-        right: 0;
+//add a nice animated underline affect on hover - based on https://codepen.io/gabrielcojea/pen/ExPaBzQ
+a:not(.alt) {
+
+    //
+    position: relative;
+
+    //this affect breaks when a link crosses multiple lines - so force nowrap for now
+    white-space: nowrap;
+
+    //
+    @include before($bottom: 12px, $right: 0) {
+
+        //
         width: 0;
         height: 2px;
+
+        //
         background-color: var(--colour-accent-alt);
         transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+
     }
 
-    @media (hover: hover) and (pointer: fine) {
-        &:hover::before{
-            left: 0;
-            right: auto;
-            width: 100%;
-        }
+    //
+    &:hover::before{
+        left: 0;
+        right: auto;
+        width: 100%;
     }
 
 }
-
-  
