--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -14,6 +14,7 @@
     //what colours
     --colour-background       : #fffefe;
     --colour-foreground       : #050000;
+    --colour-muted            : #cacaca;
 
     --colour-background-alt   : #26272b;
     --colour-foreground-alt   : #737373;
