add the section element to the about page - will be used in the future to hook in page specific css (like we do on the archive page now)

--- a/src/about.njk
+++ b/src/about.njk
@@ -2,5 +2,7 @@
 layout: layout.njk
 title: About Me
 ---
-<p>Hi, my name is <b>Richard Smith</b> and I am a <b>Web Application Developer</b> based in Northwest England. When I am not coding (at work or at home) I enjoy playing Minecraft and Pokemon Go.</p>
-<p>I go by <b>Eldarni</b> across the various sites I frequent and games that I play, you can see some of my personal projects over at <a href="https://github.com/Eldarni/">GitHub</a> or get in touch with me via <a href="https://twitter.com/_eldarni">Twitter</a>.</p>
+<section class="about">
+    <p>Hi, my name is <b>Richard Smith</b> and I am a <b>Web Application Developer</b> based in Northwest England. When I am not coding (at work or at home) I enjoy playing Minecraft and Pokemon Go.</p>
+    <p>I go by <b>Eldarni</b> across the various sites I frequent and games that I play, you can see some of my personal projects over at <a href="https://github.com/Eldarni/">GitHub</a> or get in touch with me via <a href="https://twitter.com/_eldarni">Twitter</a>.</p>
+</section>
