--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} &bull; eldarni.me</title>
 
+    <title>{{ title }} &bull; eldarni.me</title>
     <link rel="canonical" href="https://www.eldarni.me{{ page.url }}">
 
-    <style type="text/css">
-        {% include "css/main.css" ignore missing %} {# we should include this rather than inline it! #}
-    </style>
+    <link href="/css/main.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
