Add a tags section to the bottom of each post,with "tag" pages

--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -6,4 +6,11 @@ layout: layout
     <main>
         {{ content|safe }}
     </main>
+    <footer>
+        <div class="post-tags">
+            {% for tag in tags|filterTags %}
+                <a class="alt" href="/tags/{{ tag }}/"><span>#</span>{{ tag }}</a>
+            {% endfor %}
+        </div>
+    </footer>
 </article>
