Use the "new css reset" from elad2412 to attempt to hard reset browser styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,9 @@
 //variables
 @import 'partials/variables';
 
+//reset
+@import 'partials/reset';
+
 //mixins
 @import 'mixins/flex';
 @import 'mixins/font';
