--- a/src/scss/partials/_article.scss
+++ b/src/scss/partials/_article.scss
@@ -9,17 +9,14 @@ article {
     > p {
         @include font($size: var(--font-size-large), $line-height: calc(var(--font-size-large) * 1.3));
         max-width: 35ch;
-
     }
 
     //
     main {
 
-        //add a gap between the elements in the article - I can't use flex here as the columns will mess this up
-        > * + * {
-            margin-top: 2rem;
-        }
-        
+        //
+        @include flex($direction: column, $gap: 1.5rem);
+
         //add some drop cap styling to the very first letter
         > p:first-of-type::first-letter { //goes funny on mobile
 
