have the year update automatically on build (seems like a good day to add this)

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -35,7 +35,7 @@
     </div>
 
     <footer class="site-footer">
-        <p>&copy;2021 &bull; Richard Smith &bull; Please remember when reading, past me was an idiot.</p>
+        <p>&copy;{{ currentTime|year }} &bull; Richard Smith &bull; Please remember when reading, past me was an idiot.</p>
         <nav>
             <a href="/" title="Home">Home</a>
             <a href="/archive/" title="Archive">Archive</a>
