--- a/src/scss/partials/reset.scss
+++ b/src/scss/partials/reset.scss
@@ -1,21 +1,25 @@
-//The new CSS Reset - version 1.4.1 (last updated 23.11.2021)
-//https://github.com/elad2412/the-new-css-reset
 
-//remove all the styles of the "User-Agent-Stylesheet", except for the 'display' properly - The "symbol *" part is to solve Firefox SVG sprite bug
-*:where(:not(iframe, canvas, img, svg, video):not(svg *, symbol *)) {
+//The new CSS reset - version 1.7.3 (last updated 7.8.2022)
+//GitHub page: https://github.com/elad2412/the-new-css-reset
+
+//remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property The "symbol *" part is to solve Firefox SVG sprite bug
+*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
     all: unset;
     display: revert;
 }
 
 //preferred box-sizing value
-*,
-*::before,
-*::after {
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
+//reapply the pointer cursor for anchor tags
+a, button {
+    cursor: revert;
+}
+
 //remove list styles (bullets/numbers)
-ol, ul {
+ol, ul, menu {
     list-style: none;
 }
 
@@ -29,15 +33,42 @@ table {
     border-collapse: collapse;
 }
 
+//safari - solving issue when using user-select:none on the <body> text input doesn't working
+input, textarea {
+    -webkit-user-select: auto;
+}
+
 //revert the 'white-space' property for textarea elements on Safari
 textarea {
     white-space: revert;
 }
 
-//revert for bug in Chromium browsers  - fix for the content editable attribute will work properly.
-:where([contenteditable]){
+//minimum style to allow to style meter element
+meter {
+    -webkit-appearance: revert;
+    appearance: revert;
+}
+
+//reset default text opacity of input placeholder
+::placeholder {
+    color: unset;
+}
+
+//fix the feature of 'hidden' attribute, display:revert; revert to element instead of attribute
+:where([hidden]) {
+    display: none;
+}
+
+//revert for bug in Chromium browsers, fix for the content editable attribute will work properly and webkit-user-select: auto; added for Safari in case of using user-select:none on wrapper element
+:where([contenteditable]:not([contenteditable="false"])) {
     -moz-user-modify: read-write;
     -webkit-user-modify: read-write;
     overflow-wrap: break-word;
     -webkit-line-break: after-white-space;
+    -webkit-user-select: auto;
+}
+
+//apply back the draggable feature - exist only in Chromium and Safari
+:where([draggable="true"]) {
+    -webkit-user-drag: element;
 }
