--- a/src/scss/partials/_article.scss
+++ b/src/scss/partials/_article.scss
@@ -40,6 +40,22 @@ article {
             font-weight: 600;
         }
 
+        //add generic styling to links in the article
+        a {
+
+            //
+            text-decoration: underline;
+            text-decoration-thickness: 2px;
+            text-decoration-style: dotted;
+
+            //
+            color: var(--colour-accent);
+            &:hover {
+                color: var(--colour-accent-alt);
+            }
+
+        }
+
         //style the "inline" code tags
         code:not([class*="language-"]) {
             font-family: 'Consolas', 'Monaco', 'Andale Mono', 'Ubuntu Mono', monospace;
