--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -86,7 +86,44 @@ a[href="#main"] {
     h1 {
         @include font($family: var(--ff-heading), $size: clamp(3rem, 12vw + 1rem, 6rem), $weight: 600, $line-height: 1);
         text-transform: uppercase;
+    }
 
+    //subtitle
+    p.post-subtitle {
+        @include font($size: var(--font-size-large), $line-height: calc(var(--font-size-large) * 1.3));
+        max-width: 35ch;
+    }
+
+    //how long should the article take to read
+    p.post-time-to-read {
+
+        //
+        @include font($colour: var(--colour-foreground-alt), $size: var(--font-size-small), $line-height: calc(var(--font-size-small) * 1.3));
+
+        //
+        @include flex($align: center, $gap: 0.5rem);
+
+    }
+
+}
+
+//setup some simple icons that we can use across the site
+.icon {
+
+    //
+    display: inline-block;
+
+    //
+    width: 24px;
+    height: 24px;
+
+    //
+    background-color: var(--colour-accent);
+
+    //
+    &[data-icon="time"] {
+        mask: url(/icons/time.svg) no-repeat center / contain;
+        -webkit-mask: url(/icons/time.svg) no-repeat center / contain;
     }
 
 }
