--- a/src/scss/partials/_article.scss
+++ b/src/scss/partials/_article.scss
@@ -60,17 +60,30 @@ article {
     }
 
     //
-    .post-tags a {
+    footer {
 
         //
-        @include font($size: 0.8em, $colour: var(--colour-background-alt));
-        &:hover {
-            color: var(--colour-foreground-alt);
+        @include flex($direction: column, $gap: 1rem);
+
+        //
+        .post-info {
+            @include font($colour: var(--colour-foreground-alt), $size: var(--font-size-small), $line-height: calc(var(--font-size-small) * 1.3));
         }
 
         //
-        span {
-            color: var(--colour-foreground-alt);
+        .post-tags a {
+
+            //
+            @include font($size: 0.8em, $colour: var(--colour-background-alt));
+            &:hover {
+                color: var(--colour-foreground-alt);
+            }
+
+            //
+            span {
+                color: var(--colour-foreground-alt);
+            }
+
         }
 
     }
