add a hover effect to the links in the footer

--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -24,6 +24,7 @@
         //
         a {
             @include font($colour: var(--colour-foreground-alt));
+            &:hover { @include font($colour: var(--colour-accent)); }
         }
 
     }
