--- a/src/scss/partials/_archive.scss
+++ b/src/scss/partials/_archive.scss
@@ -54,7 +54,7 @@ section.archive {
             padding-left: 0.25ch;
             text-align: right;
             white-space: normal;
-            color: var(--colour-muted);
+            color: var(--colour-foreground-alt);
         }
         
     }
