add margin below read time

--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -129,6 +129,9 @@ a[href="#main"] {
         //
         @include flex($align: center, $gap: 0.5rem);
 
+        //
+        margin-block-end: 1em;
+
     }
 
 }
