create a tags page

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -29,6 +29,7 @@
             <p>eldarni.me</p>
             <nav>
                 <a href="/" title="Home">Home</a>
+                <a href="/tags/" title="Tags">Tags</a>
                 <a href="/archive/" title="Archive">Archive</a>
                 <a href="/about/" title="About">About</a>
             </nav>
@@ -51,6 +52,7 @@
         <p>&copy;{{ currentTime|year }} &bull; Richard Smith &bull; Please remember when reading, past me was an idiot.</p>
         <nav>
             <a href="/" title="Home">Home</a>
+            <a href="/tags/" title="Tags">Tags</a>
             <a href="/archive/" title="Archive">Archive</a>
             <a href="/about/" title="About">About</a>
         </nav>
