--- a/src/tags.njk
+++ b/src/tags.njk
@@ -2,7 +2,7 @@
 layout: layout
 permalink: /tags/
 ---
-<section class="archive">
+<section class="tags">
     <h1>Tags</h1>
     {% for tag, count in collections.post|getAllTags %}
         <a class="alt" href="/tags/{{ tag }}/" title="{{ tag }}">
