--- a/src/scss/partials/_archive.scss
+++ b/src/scss/partials/_archive.scss
@@ -2,22 +2,6 @@
 //
 section.archive {
  
-    //quick string repeat function to help out with the toc dots
-    @function repeat($string, $times) {
-
-        //
-        $output: '';
-
-        //
-        @for $i from 1 through $times {
-            $output: $output + $string;
-        }
-
-        //
-        @return $output;
-
-    }
-
     //
     @include flex($direction: column, $gap: 1rem);
     font-size: calc(var(--font-size-small) * 1.5);
@@ -36,8 +20,13 @@ section.archive {
         //
         gap: 0.5em;
 
+        //
         color: var(--colour-foreground);
         
+        //
+        &:hover {
+            color: $colour-accent;
+        }
     }
 
     //display the post title
@@ -66,6 +55,4 @@ section.archive {
         height: 2.1em;
     }
 
-
 }
-
